--- a/Android/app/app/src/main/res/values/strings.xml
+++ b/Android/app/app/src/main/res/values/strings.xml
@@ -83,4 +83,5 @@
     <string name="spracherkennung">Spracherkennung</string>
     <string name="eingeschaltet">Eingeschaltet</string>
     <string name="content">Content</string>
+    <string name="title_activity_main2">Main2Activity</string>
 </resources>
